--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "liron/simple-dict",
 	"description": "a simple dictionary",
-    "license": "MIT License",
+    "license": "MIT",
     "authors": [
         {
             "name": "lironli",
